--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,14 @@ jobs:
       - run: npm ci
       - run: npm run build
       - uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: build
-          path: .next/
+          path: |
+            .next/
+            out/
           retention-days: 7
+          if-no-files-found: warn
 
   security:
     name: Security Audit
